--- a/gmall0224-realtime/.gitignore
+++ b/gmall0224-realtime/.gitignore
@@ -3,7 +3,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-/target
+target/*
 gmall0224-realtime.iml
 ### STS ###
 .apt_generated
